--- a/src/containers/Board.module.css
+++ b/src/containers/Board.module.css
@@ -1,10 +1,12 @@
 .Container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
 }
 .SquareGrid {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(10, 1fr);
-  width: 60vmin;
-  height: 60vmin;
+  width: 100vmin;
+  height: 100vmin;
 }
