--- a/src/containers/Board.module.css
+++ b/src/containers/Board.module.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 20px;
+  padding: 20px;
+  background-color: #fff;
 }
 .SquareGrid {
   display: grid;
